[package]
name = "kvs"
version = "0.1.0"
authors = ["lieck <728269388@qq.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
clap = "4.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"