[package]
name = "kvs"
version = "0.1.0"
authors = ["lieck <728269388@qq.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
clap = { version = "4.2.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bson = "2.6.0"
serde_json = "1.0"
failure = "0.1.5"
log = "0.4.17"
fs_extra = "1.3.0"
bytes = "1"
env_logger = "0.9"
sled = "0.34.6"


[dev-dependencies]
criterion = "0.3"
rand = " 0.8.5"
tempfile = "3.3.0"

[[bench]]
name = "my_benchmark"
harness = false